# killswitch

./: .gitignore  .justfile  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gopkg.toml  IMPLEMENTATION.md  KillSwitch_OFF  KillSwitch_ON  LICENSE  Makefile  README.md  SYSCALL_NOTES.md  TESTING.md  VPN_DETECTION.md  build.rs  color.go  go.mod  go.sum  killswitch.go  killswitch_test.go  pf.go  pf_test.go  test_killswitch.sh  ugsx.go  ugsx_test.go  whoami.go
.circleci/: config.yml
.github/workflows/: build.yml  coverage.yml  deploy.yml  go.yml  homebrew.yml  test.yml
cmd/killswitch/: main.go
src/: lib.rs
src/cli/: mod.rs  start.rs  verbosity.rs
src/cli/actions/: default.rs  mod.rs  run.rs
src/cli/commands/: mod.rs
src/cli/dispatch/: mod.rs
src/killswitch/: mod.rs  network.rs  pf.rs  rules.rs  whoami.rs
